--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         margin: 0px;
         height: 0px;
         color: white;
-        background-image: url('../html/training-gb4637dc6d_1280.jpg');
+        background-image: url('training-gb4637dc6d_1280.jpg');
         }
         .left{
             display: inline-block;
