--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
     <header class="header">
         <!-- for logo -->
         <div class="left">
-        <img src="../html/logo2.png" alt="logo">
+        <img src="./logo2.png" alt="logo">
         <div>Spark Fitness</div>
         </div>
 
